# GRASS_FUTURES

./: .flake8  .markdownlint.yml  .pre-commit-config.yaml  FAQs.md  FUTURES_Inputs.md  README.md  pyproject.toml
r.futures/r.futures.calib/: r.futures.calib.py
r.futures/r.futures.calib/testsuite/: test_r_futures_calib.py
r.futures/r.futures.demand/: r.futures.demand.py
r.futures/r.futures.demand/testsuite/: test_r_futures_demand.py
r.futures/r.futures.devpressure/testsuite/: test_r_futures_devpressure.py
r.futures/r.futures.gridvalidation/: r.futures.gridvalidation.py
r.futures/r.futures.parallelpga/: r.futures.parallelpga.py
r.futures/r.futures.parallelpga/testsuite/: test_r_futures_parallelpga.py
r.futures/r.futures.pga/testsuite/: test_r_futures_pga.py
r.futures/r.futures.potential/: r.futures.potential.py
r.futures/r.futures.potential/testsuite/: test_r_futures_potential.py
r.futures/r.futures.potsurface/: r.futures.potsurface.py
r.futures/r.futures.potsurface/testsuite/: test_r_futures_potsurface.py
r.futures/r.futures.simulation/: climate.c  climate.h  devpressure.c  inputs.c  inputs.h  main.c  map.c  map.h  output.c  output.h  patch.c  patch.h  r.futures.simulation.html  random.c  random.h  redistribute.c  redistribute.h  simulation.c  simulation.h  utils.c
r.futures/r.futures.validation/: r.futures.validation.py
